--- a/Qchronologie.html
+++ b/Qchronologie.html
@@ -6,8 +6,16 @@
     <title>Quiz Chronologie</title>
   </head>
   <body>
-<script src="script.js"></script>
+<script src="Qchronologie.html"></script>
 
+<div id="quiz-container">
+    <h2 id="question"></h2>
+    <button class="reponse" id="rep1"></button>
+    <button class="reponse" id="rep2"></button>
+    <button class="reponse" id="rep3"></button>
+  </div>
 
+  <p id="score"></p>
+  <p><a href="index.html">Retour au menu</a></p>
 
   </body>
