--- a/Qpersonnages.html
+++ b/Qpersonnages.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Personnages</h1>
-<script src="personnages.js"></script>
+<script src="Qpersonnages.html"></script>
 
 <div id="quiz-container">
     <h2 id="question"></h2>
