--- a/Qpersonnages.html
+++ b/Qpersonnages.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz Personnages</title>
     <link href="./css/output.css" rel="stylesheet">
+     <link href="./css/fonts.css"  rel="stylesheet">
   </head>
   <body>
     <h1>Personnages</h1>
