--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz</title>
     <link href="./css/output.css" rel="stylesheet">
+    <link href="./css/fonts.css"  rel="stylesheet">
   </head>
-  <body>
-    <h1>Bienvenue sur le Quizz thème zelda !</h1>
+  <body class="font-hylia bg-zelda bg-cover text-yellow-500 flex flex-col justify-center items-center text-center h-screen">
+    <h1 class="text-7xl ">Bienvenue sur le Quizz thème zelda !</h1>
     <p>Choisissez un thème pour commencer :</p>
 
-    <button id="jouer" class="">jouer</button>
+    <button id="jouer">jouer</button>
       <div id="choix" class="hidden">
         <button name="theme" id="perso">Personnages</button>
 
