--- a/Qchronologie.html
+++ b/Qchronologie.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz Chronologie</title>
-    <link href="./css/output.css" rel="stylesheet" />
+    <link href="./css/output.css" rel="stylesheet">
+     <link href="./css/fonts.css"  rel="stylesheet">
   </head>
   <body>
     <h1>Chronologie</h1>
