--- a/Qchronologie.html
+++ b/Qchronologie.html
@@ -7,8 +7,8 @@
     <link href="./css/output.css" rel="stylesheet">
      <link href="./css/fonts.css"  rel="stylesheet">
   </head>
-  <body>
-    <h1>Chronologie</h1>
+  <body class="font-hylia bg-zelda bg-cover text-yellow-500 flex flex-col justify-center items-center text-center h-screen">
+    <h1 class="text-7xl  text-red-900">Chronologie</h1>
     <div id="contenue">
       <h2 id="question"></h2>
       <button class="reponse" id="reponse0"></button>
