--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link href="./css/fonts.css"  rel="stylesheet">
   </head>
   <body class="font-hylia bg-zelda bg-cover text-yellow-500 flex flex-col justify-center items-center text-center h-screen">
-    <h1 class="text-7xl ">Bienvenue sur le Quizz thème zelda !</h1>
-    <p>Choisissez un thème pour commencer :</p>
+    <h1 class="text-7xl  text-red-900">Bienvenue sur le Quizz thème zelda !</h1>
+    <p class="p-3">Choisissez un thème pour commencer :</p>
 
-    <button id="jouer">jouer</button>
+    <button id="jouer" class="text-5xl  text-red-900 p-2">jouer</button>
       <div id="choix" class="hidden">
         <button name="theme" id="perso">Personnages</button>
 
@@ -20,7 +20,7 @@
         <button name="theme" id="univers">Univers</button>
       </div>
 
-      <h2>Mes scores</h2>
+      <h2>scores</h2>
 <p>Personnages : <span id="score-personnages">-</span></p>
 <p>Univers : <span id="score-univers">-</span></p>
 <p>Chronologies : <span id="score-chronologies">-</span></p>
