--- a/Qpersonnages.html
+++ b/Qpersonnages.html
@@ -7,7 +7,7 @@
     <link href="./css/output.css" rel="stylesheet">
      <link href="./css/fonts.css"  rel="stylesheet">
   </head>
-  <body>
+  <body class="font-hylia bg-zelda bg-cover text-yellow-500 flex flex-col justify-center items-center text-center h-screen">
     <h1>Personnages</h1>
 
 
