--- a/Qunivers.html
+++ b/Qunivers.html
@@ -7,7 +7,7 @@
     <link href="./css/output.css" rel="stylesheet">
      <link href="./css/fonts.css"  rel="stylesheet">
   </head>
-  <body>
+  <body class="font-hylia bg-zelda bg-cover text-yellow-500 flex flex-col justify-center items-center text-center h-screen">
     <h1>Univers</h1>
     <div id="contenue">
       <h2 id="question"></h2>
