--- a/Qpersonnages.html
+++ b/Qpersonnages.html
@@ -4,21 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz Personnages</title>
-    <link href="./css/output.css" rel="stylesheet">
-     <link href="./css/fonts.css"  rel="stylesheet">
+    <link href="./css/output.css" rel="stylesheet" />
+    <link href="./css/fonts.css" rel="stylesheet" />
   </head>
-  <body class="font-hylia bg-zelda bg-cover text-yellow-500 flex flex-col justify-center items-center text-center h-screen">
-    <h1>Personnages</h1>
+  <body class="font-hylia bg-zelda bg-cover flex flex-col text-white justify-center items-center text-center h-screen">
+    <h1 class="text-5xl text-red-900 p-4">Personnages</h1>
 
+    <div id="contenue" class="flex flex-col w-full justify-center items-center h-auto">
+      <div class="bg-indigo-950/80 w-2/4 h-60 rounded-3xl justify-center items-center flex mb-4">
+        <h2 id="question"></h2>
+      </div>
+      <button class="reponse bg-indigo-950/80 rounded-xl w-2/5 h-20 mb-4" id="reponse0"></button>
+      <button class="reponse bg-indigo-950/80 rounded-xl w-2/5 h-20 mb-4" id="reponse1"></button>
+      <button class="reponse bg-indigo-950/80 rounded-xl w-2/5 h-20 mb-4" id="reponse2"></button>
+    </div>
 
-<div id="contenue">
-    <h2 id="question"></h2>
-    <button class="reponse" id="reponse0"></button>
-    <button class="reponse" id="reponse1"></button>
-    <button class="reponse" id="reponse2"></button>
-  </div>
-
-  <p id="score"></p>
-  <p><a href="index.html">Retour au menu</a></p>
-<script src="personnages.js"></script>
+    <p id="score"></p>
+    <p><a href="index.html">Retour au menu</a></p>
+    <audio class="hidden" id="audio" src="./ressource/fairies-fountain.mp3" type="audio/mp3" controls autoplay loop>
+</audio>
+<div>
+  <button id="player">I I</button>
+</div>
+    <script src="personnages.js"></script>
   </body>
+</html>
